# langchain-academy

./: Makefile  README.md  pyproject.toml
module-0/: basics.ipynb
module-1/: agent-memory.ipynb  chain.ipynb  deployment.ipynb  router.ipynb  simple-graph.ipynb
module-1/studio/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
module-2/studio/.langgraph_api/: .langgraph_ops.pckl
module-3/: streaming-interruption.ipynb
